catholicon-ms-result-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catholicon-ms-result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catholicon-ms-result
      version: v1
  template:
    metadata:
      labels:
        app: catholicon-ms-result
        version: v1
    spec:
      containers:
        - name: catholicon-ms-result
          image: rdomloge/catholicon-ms-result-armv7
          ports:
            - containerPort: 8080
