catholicon-ms-leagues-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catholicon-ms-leagues-service
spec:
  selector:
    app: catholicon-ms-leagues
  ports:
    - protocol: TCP
      port: 82
      targetPort: 8080
