catholicon-ms-matchcard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catholicon-ms-matchcard-service
spec:
  selector:
    app: catholicon-ms-matchcard
  ports:
    - protocol: TCP
      port: 84
      targetPort: 8080
