catholicon-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catholicon-service
spec:
  selector:
    app: catholicon
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
  type: LoadBalancer
  externalIPs:
  - 10.0.0.12
